syntax = "proto3";

package report.v1;
option go_package = "./reportpb";

service ReportService {
  rpc Report(ReportRequest) returns (stream ReportResponse);
}

message ReportRequest {
  string desc = 1;
  string ref_url = 2;
}

message ReportResponse {
    int32 result = 1;
}